fix overflow

--- a/src/components/Marshmallow.css
+++ b/src/components/Marshmallow.css
@@ -43,6 +43,8 @@
 }
 
 .inner > .content {
+    width: 100%;
+    padding: 0 40px;
     color: #003c56;
     font-size: x-large;
 }
